plugins {
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'java'
}

java {
	sourceCompatibility = '17'
}

group = 'com.recipes'
version = '1.0.0'

repositories {
	mavenCentral()
}

project.ext.local=true

dependencies {

	if(project.hasProperty('local')){
		dependencies {
			runtimeOnly 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
		}
	}

	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	
	implementation 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	runtimeOnly 'io.github.cdimascio:java-dotenv:5.4.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
	testImplementation 'io.projectreactor:reactor-test'
	
	testCompileOnly 'org.projectlombok:lombok:1.18.30'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}
